fix margin for mobile version

--- a/index.html
+++ b/index.html
@@ -202,10 +202,8 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-12">                            
-                            
-
-                            <div class="grid-item grid-item--width moments friends" style="padding-left: 16px; padding-right: 16px;">
+                        <div class="col-12">     
+                            <div class="grid-item grid-item--width grid--margin-x">
                                     <a href="images/gallery/lg/MMM_0251.webp" data-lightbox="roadtrip">
                                         <img src="images/gallery/lg/MMM_0251.webp" alt="gallery">
                                     </a>
@@ -357,7 +355,7 @@
                     <div class="row">
                         <div class="col-12"> 
                             
-                            <div class="grid-item grid-item--width moments friends" style="padding-left: 16px; padding-right: 16px;">
+                            <div class="grid-item grid-item--width grid--margin-x">
                                     <a href="images/gallery/lg/MMM_1115.webp" data-lightbox="roadtrip">
                                         <img src="images/gallery/lg/MMM_1115.webp" alt="gallery">
                                     </a>
