adjust padding for mobile

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <!-- Section Gallery -->
 
             <section id="gallery" class="section gallery section-gray">
-                <div class="container">
+                <div class="container no-padding-on-mobile">
                     <div class="row">
                         <div class="col-12 text-center heading">
                             <span>Our Memories</span>
@@ -285,7 +285,7 @@
 
            
             <section id="gallery" class="section gallery">
-                <div class="container">
+                <div class="container no-padding-on-mobile">
                     <div class="row">
                         <div class="col-12 text-center heading">
                             <span>Our Memories</span>
@@ -339,15 +339,15 @@
             </section>
 
             <section id="gallery" class="section gallery section-gray">
-                <div class="container">
+                <div class="container no-padding-on-mobile">
                     <div class="row">
                         <div class="col-12 text-center heading">
                             <span>Our Memories</span>
 
-                            <h2>Golden Evening, Bagan</h2>
+                            <h2>Golden Evening</h2>
 
                             <p>
-                                February 2025
+                                Bagan, February 2025
                             </p>
                         </div>
                     </div>
