--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Belle</h3>
+                            <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Kyaw & Thiri</h3>
 
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
@@ -344,7 +344,7 @@
                         <div class="col-12 text-center heading">
                             <span>Our Memories</span>
 
-                            <h2>Golden Evening</h2>
+                            <h2>Golden Evening, Bagan</h2>
 
                             <p>
                                 Bagan, February 2025
