--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
             <!-- Header -->
 
-            <section id="header" class="cover" data-parallax="scroll" data-image-src="images/header-bg.jpg">
+            <section id="header" class="cover" data-parallax="scroll" data-image-src="images/header-bg.jpg" style="background-image: url('images/header-bg.jpg'); background-size: cover; background-position: center center;">
+
                 <div class="overlay"></div>
 
                 <div class="container">
